# hudi-pyspark-bash-dbgenerator

./: .gitignore  README.md  empty_hudi.sh  get_data.sh  prepare_ubuntu.sh  start_editor.sh
code/: README.md  create_environment.sh  main.py  package.sh  pyproject.toml  requirements.txt  run_hudi.sh
code/src/: main.py
code/src/hudi_pyspark_bash_exp/: literal_col_maker.py  main.py
code/test/: test.py
s3_mock_data/chocolate_table/: load.csv
s3_mock_data/user_chocolate_table/: load.csv
s3_mock_data/user_table/: load.csv
